feat: Update to latest version of Unifi controller